--- a/TodoManonPoulain/app/src/main/res/layout/item_task.xml
+++ b/TodoManonPoulain/app/src/main/res/layout/item_task.xml
@@ -20,4 +20,12 @@
         android:layout_height="match_parent"
         tools:text="Text Description Test"
         />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_delete" />
+
+
 </LinearLayout>
