--- a/TodoManonPoulain/app/src/main/res/layout/item_task.xml
+++ b/TodoManonPoulain/app/src/main/res/layout/item_task.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/task_title"
@@ -18,14 +17,29 @@
         android:id="@+id/textDescriptor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:text="Text Description Test"
-        />
+        tools:text="Text Description Test" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_delete" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/imageButtonEdit"
+            android:layout_width="205dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@android:drawable/ic_menu_edit"
+            tools:src="@android:drawable/ic_menu_edit"
+            android:contentDescription="TODO" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="205dp"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_delete"
+            android:contentDescription="TODO" />
+    </LinearLayout>
 
 
 </LinearLayout>
