--- a/TodoManonPoulain/app/src/main/res/layout/fragment_task_list.xml
+++ b/TodoManonPoulain/app/src/main/res/layout/fragment_task_list.xml
@@ -39,7 +39,8 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageAvatar"
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
